Alignmenet prblem Solved During testing

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   .main{
     display:flex;
     flex-direction: column;
+    margin-bottom: 10%;
     
   } 
 }
